--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,5 @@
 PORT = 8000
 DB_URL = "mongodb+srv://sachinAdmin:HSRQMQgGnixZQmKy@cluster1.x766c.mongodb.net/studynotion"
+MAIL_HOST=
+MAIL_USER=
+MAIL_PASS=
