--- a/Backend/.env
+++ b/Backend/.env
@@ -3,3 +3,4 @@ DB_URL = "mongodb+srv://sachinAdmin:HSRQMQgGnixZQmKy@cluster1.x766c.mongodb.net/
 MAIL_HOST=
 MAIL_USER=
 MAIL_PASS=
+JWT_SECRET= "Sachin@9316"
